# graph-coloring

./: .clang-format  CMakeLists.txt  DOCUMENTATION.md  EFFORT_DISTRIBUTION.md  README.md  main.cpp
benchmark/: Benchmark.cpp  Benchmark.h  MemoryMonitor.cpp  MemoryMonitor.h  tiny.graph.fast
data-analysis/: Data analysis.ipynb  parse-fast.csv  parse-slow.csv  rgg-graphs.csv
graph/: Graph.cpp  Graph.h
parse/: Dimacs10Parser.cpp  Dimacs10Parser.h  DimacsParser.cpp  DimacsParser.h  FastParser.cpp  FastParser.h  MetisParser.cpp  MetisParser.h  Parser.cpp  Parser.h  Serializer.cpp  Serializer.h
solve/: FVFSolver.cpp  FVFSolver.h  JonesSolver.cpp  JonesSolver.h  LDFSolver.cpp  LDFSolver.h  LDFparallelSolver.cpp  LDFparallelSolver.h  LDFsequentialSolver.cpp  LDFsequentialSolver.h  LDFsolver.cpp  LDFsolver.h  LDFsolverParallel.cpp  LDFsolverParallel.h  LubySolver.cpp  LubySolver.h  RandomPrioritySolver.cpp  RandomPrioritySolver.h  RandomSelectionSolver.cpp  RandomSelectionSolver.h  SDLSolver.cpp  SDLSolver.h  SDLparallelSolver.cpp  SDLparallelSolver.h  SDLsequentialSolver.cpp  SDLsequentialSolver.h  SDLsolverParallel.cpp  SDLsolverParallel.h  SequentialSolver.cpp  SequentialSolver.h  Solver.h
utils/: PCVector.h  RangeSplitter.h
